--- a/gardencity/src/ListingInfoPage.css
+++ b/gardencity/src/ListingInfoPage.css
@@ -1,20 +1,24 @@
 .site-title{
     font-family:Manrope;
-    font-weight: bold;
+    font-weight: 700;
     font-size:40px;
-    margin: 1em 0 1em 0;
+    margin: 0 0 .25em 0;
+    overflow: 'false';
 }
 
 .site-subtitle{
     font-family:Manrope;
     font-weight: bold;
-    font-size:27px;
+    font-size:25px;
     color:#606060;
+    margin: 0;
+    overflow: 'false';
 }
 
 .site-location{
     font-family:Manrope;
     font-weight: bold;
-    font-size:27px;
+    font-size:25px;
     margin:0;
+    overflow: 'false';
 }
