--- a/gardencity/src/components/Header.css
+++ b/gardencity/src/components/Header.css
@@ -35,7 +35,7 @@
     padding: 0rem 1rem 0rem 0rem;
     height: 100%;
     font-size:1rem;
-    font-family:'Work Sans';
+    font-family:'Rubik';
     display:flex;
     place-items:center;
 }
@@ -47,7 +47,7 @@
     padding: 0rem 1rem 0rem 0rem;
     height: 100%;
     font-size:1rem;
-    font-family:'Work Sans';
+    font-family:'Rubik';
     display:flex;
     place-items:center;
 }
